[package]
name = "lockbox_governor"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lockbox_governor"

[features]
default = ["testnet"]
mainnet = ["wormhole-anchor-sdk/mainnet"]
testnet = ["wormhole-anchor-sdk/solana-devnet"]
devnet = ["wormhole-anchor-sdk/tilt-devnet"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[profile.release]
overflow-checks = true

[dependencies]
solana-program = "=1.18.1"
anchor-lang = { version = "0.29.0", features = ["init-if-needed"]}
wormhole-anchor-sdk = { version = "0.29.0-alpha.1", default-features = false }
anchor-spl = "0.29.0"
wormhole-io = "0.1.3"
spl-token = { version = "4.0.1", features = ["no-entrypoint"] }
